# alia

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE.txt  NOTES.md  README.md  README.rst  alia.hpp  appveyor.yml  codecov.yml  conanfile.py  fips.cmd  fips.yml  requirements.txt  vcpkg.json
backends/renderers/gl/: CMakeLists.txt
backends/text_engines/msdf/: CMakeLists.txt
core/: CMakeLists.txt
core/base/: CMakeLists.txt
core/base/src/: arena.cpp  infinite_arena.cpp
core/cmake/: utilities.cmake
core/compilation_tests/: assign_noncopyable.cpp  invalid_signal_access.cpp  invalid_signal_argument.cpp
core/flow/: CMakeLists.txt
core/flow/src/: arena.cpp  infinite_arena.cpp
core/foundation/: CMakeLists.txt
core/foundation/src/: arena.cpp  infinite_arena.cpp
core/include/alia/: arena.hpp  bit_packing.hpp  color.hpp  context.hpp  display_list.hpp  drawing.hpp  events.hpp  geometry.hpp  ids.hpp  prelude.hpp  substrate.hpp  text.hpp  theme.hpp
core/kernel/cpp/: CMakeLists.txt
core/kernel/runtime/: CMakeLists.txt
core/runtime/: CMakeLists.txt
core/runtime/src/: arena.cpp  arenas.cpp  display_list.cpp  drawing.cpp  infinite_arena.cpp  panic.cpp  scratch.cpp  (+2 more)
core/src/: arena.cpp  color.cpp  drawing.cpp  panic.cpp  stack.cpp  system.cpp
core/ui/: CMakeLists.txt
core/unit_tests/: common.cpp  id.cpp  runner.cpp  traversal.hpp
docs/: CMakeLists.txt  README.md  actions.md  app-design.md  assorted-examples.md  basic-signals.md  conditionals.md  conf.py  configuration.md  consuming-signals.md  contents.md  contributing.md  control-flow-basics.md  control-flow.rst  custom-signals.md  data-flow.dot  data-graph.dot  dataflow-basics.md  efficiency.md  elements.md  event-triggers.md  feature-overview.md  flow-basics.md  flow-concepts.md  flow-tracking.md  fragment.html  function-application.md  getting-started.md  goals-and-rationales.rst  going-further-with-html.md  high-level-flow.md  html-introduction.md  index.html  index.rst  integration.md  interactive-hello.md  introduction.md  introduction.rst  key-features.md  landing.md  (+26 more)
docs/_static/: custom.css
docs/cmake/: alia-html.cmake  utilities.cmake
docs/control-flow/: data-graph.rst  tracking-mechanisms.rst
docs/developer/: building-and-testing.rst  goals-and-rationales.rst
docs/docs/: alia-flow.dot  basic-signals.md  configuration.md  consuming-signals.md  contributing.md  data-graph.dot  elements.md  event-triggers.md  flow-tracking.md  fragment.html  function-application.md  getting-started.md  going-further-with-html.md  high-level-flow.md  html-introduction.md  pure-components.md  the-context.md  the-data-graph.md
docs/in-depth/: best-practices.rst  control-flow.rst  loops-and-conditionals.rst  signals.rst
docs/introduction/: key-features.md  key-features.rst  motivation.md  reactive-hello.md  reactive-hello.rst
docs/other-guides/: app-design.rst
docs/scripts/: build-docs.sh  link-docs.sh  process-docs.py
docs/signals/: adaptors.rst  construction.rst  custom-signals.rst  function-application.rst  introduction.md  introduction.rst  operators-and-casts.md  operators-and-casts.rst  time.md
docs/src/: color.cpp  color.hpp  demo.hpp
docs/the-basics/: control-flow.rst  introduction.rst  introductory-examples.rst  motivation.rst  reactive-hello.rst  signals.rst  what-is-alia.rst
examples/: CMakeLists.txt  app.cpp  assets.hpp  d3d11_boxes_app.cpp  dxgi_present_probe.cpp  factors.cpp  glfw_gl_embed_app.cpp  index.html  main.cpp  my_shaper.cpp  my_shaper.hpp  prototyping.cpp  roboto-msdf.h  runner.cpp  shader_gallery.cpp  shader_gallery_app.cpp  style.css  test.cpp
examples/asm-dom/: CMakeLists.txt  README.md  color.hpp  demo.hpp  demos.cpp  dom.cpp  dom.hpp  emscripten.cpp  emscripten.hpp  index.html  introduction.cpp  main.cpp  pure-material.css  sandbox.cpp  sandbox.css  style.css
examples/assets/: notargs.glsl
examples/bootstrap-demo/: demo.css  index.html  main.cpp
examples/common/: demo_text.cpp  demo_text.hpp
examples/core-demos/: index.html  main.cpp
examples/demo-utilities/: README.md  utilities.cpp  utilities.hpp
examples/demolib/: index.html
examples/elements-demo/: demo.css  index.html  main.cpp
examples/io-demos/: index.html  main.cpp
examples/prototyping/: allocation_probe.h  demos.h  flow_panel.h  layout_mods.h  macros.cpp  msdf.h  panel.h  rect.h
examples/qt/: .gitignore  CMakeLists.txt  README.md  adaptor.cpp  adaptor.hpp  conanfile.txt  sandbox.cpp
examples/routing-demo/: demo.css  index.html  main.cpp
examples/shader_gallery/: alia_effect_frame.slang  notargs.slang  notargs_params.h
examples/todo-mvc/: model.hpp  ui.cpp
legacy/: CMakeLists.txt  README.md  codecov.yml
legacy/docs/: README.md
legacy/examples/: CMakeLists.txt  assets.cpp  shader_gallery.cpp  test.cpp
legacy/scripts/: apply-code-styling.sh  cmake-emscripten-ui.sh
modules/html/: CMakeLists.txt
modules/indie/: CMakeLists.txt
shell/app/: CMakeLists.txt
shell/gl/: CMakeLists.txt
tests/: CMakeLists.txt  accessors.cpp  component_collection.cpp  contexts.cpp  data_graph.cpp  dynamic_component_collections.cpp  event_routing.cpp  id.cpp  runner.cpp  static_component_collections.cpp
tests/alia/: accessors.cpp  data_graph.cpp  event_routing.cpp  geometry.cpp  id.cpp  layout.cpp  test.hpp
tests/base/: test_arena.cpp  test_bit_packing.cpp
tests/compilation/: bad_function_view_application.cpp  copy_construct_noncopyable.cpp  invalid_tag_access.cpp
tests/core/: CMakeLists.txt  runner.c  test_arena.cpp  test_bit_packing.cpp  test_color.cpp  test_scratch.cpp  test_substrate.cpp
tests/flow/: CMakeLists.txt  test_arena.cpp  test_bit_packing.cpp
tests/foundation/: CMakeLists.txt  test_arena.cpp  test_bit_packing.cpp
tests/kernel/: CMakeLists.txt  test_arena.cpp  test_bit_packing.cpp  test_scratch.cpp  test_substrate.cpp
tests/support/: CMakeLists.txt
tests/ui/: CMakeLists.txt  test_color.cpp
tools/: CMakeLists.txt  asset_builder.cpp  patch_freetype_gpos.cmake  shader_builder.cpp
(+1726 files in other folders)
